<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FitFit</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--앱 이름-->
    <string name="FitFit">FitFit</string>

    <!--카카오 앱 키 -->
    <string name="kakao_app_key">d997bc71e6bb7cad42042752aa3d4f9f</string>

    <!--바텀 내비게이션 아이템-->
    <string name="home">홈</string>
    <string name="exercise">운동</string>
    <string name="diary">운동일지</string>
    <string name="user">내정보</string>

    <!--로그인 프래그먼트-->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="findPassword">비밀번호 찾기</string>
    <string name="signUp">회원가입</string>
    <string name="login">로그인</string>
    <string name="cannotLogin">아이디 혹은 비밀번호가 일치하지 않습니다.</string>

    <!--회원가입 프래그먼트-->
    <string name="pageCount">(%s/4)</string>
    <string name="emailAuthentication">이메일 인증</string>
    <string name="authenticationCode">인증코드</string>
    <string name="next">다음</string>
    <string name="resend">재전송</string>
    <string name="passwordHint">영어, 숫자, 특수문자 조합으로 이루어진 8~15자의 문자</string>
    <string name="nicknameHint">2~8자의 한글,숫자만 입력 가능합니다.</string>
    <string name="nicknameInput">닉네임 입력</string>
    <string name="enterPassword">비밀번호 입력</string>
    <string name="reconfirmPassword">비밀번호 재확인</string>
    <string name="nickname">닉네임</string>
    <string name="confirmUserInfo">회원정보 확인</string>
    <string name="complete">완료</string>
    <string name="validEmailFormat">올바른 이메일 형식 입니다.</string>
    <string name="inValidEmailFormat">이메일 형식이 올바르지 않습니다.</string>
    <string name="validPasswordFormat">올바른 비밀번호 형식 입니다.</string>
    <string name="inValidPasswordFormat">비밀번호 형식이 올바르지 않습니다.</string>
    <string name="correctPasswordFormat">비밀번호가 일치합니다.</string>
    <string name="inCorrectPasswordFormat">비밀번호가 일치하지 않습니다.</string>
    <string name="validNicknameFormat">올바른 닉네임 형식 입니다.</string>
    <string name="inValidNicknameFormat">닉네임 형식이 올바르지 않습니다.</string>
    <string name="userInfoCheck">회원정보 확인</string>
    <string name="userEmail">이메일 : %s</string>
    <string name="userNickname">닉네임 : %s</string>
    <string name="timer">00:00</string>
    <string name="code_verification_successful">코드 인증에 성공 했습니다.</string>
    <string name="code_verification_failure">유효하지 않은 인증코드 입니다.</string>
    <string name="code_verification_resend">인증코드를 재전송 해주세요.</string>
    <string name="canUseNickname">사용 가능한 닉네임 입니다.</string>
    <string name="alreadyExistNickname">이미 존재하는 닉네임 입니다.</string>
    <string name="successSignUp">회원가입이 완료되었습니다.</string>
    <string name="error">오류가 발생했습니다.</string>

    <!--홈 프래그먼트-->
    <string name="weekExerciseCheck">이번 주 운동량 체크</string>
    <string name="ranking">랭킹</string>
    <string name="rankingChoice">챌린지 랭킹 선택</string>
    <string name="variableExercisePlay">다양한 운동을 즐겨보세요</string>
    <string name="viewAll">전체보기</string>
    <string name="allExercise">다양한 운동</string>
    <string name="challengeRanking">챌린지 랭킹</string>
    <string name="explainAllExercise">다양한 운동을 이용하고 싶다면?\n구독 후 9가지 운동을 이용해 보세요</string>
    <string name="subscribe">구독하기</string>
    <string name="myRanking">%1$s 님의 현재 랭킹은 %2$s 위 입니다.</string>
    <string name="check">확인</string>
    <string name="challengeCountText">%1$s / %2$s</string>
    <string name="challengeCountFormat">%1$s 총 %2$s 회</string>
    <string name="challengeRank">%1$d 위</string>
    <string name="rankStandardFormat"> / %1$s 일</string>
    <string name="rankPointFormat">%1$s 회</string>

    <!--운동 프래그먼트-->
    <string name="todayExerciseStart">오늘의 운동 시작</string>
    <string name="todayExercise">오늘의 운동</string>
    <string name="moreExercise">더 다양한 운동을 하고 싶다면?</string>
    <string name="quickView">간략히 보기</string>
    <string name="detailView">자세히 보기</string>
    <string name="monthChallenge">이달의 챌린지</string>
    <string name="alreadyParticipatingThisChallenge">이미 해당 챌린지에 참여 중입니다.</string>
    <string name="startThisChallenge">해당 챌린지에 참여를 시작합니다.</string>
    <string name="join">참여</string>

    <!--운동 정보 프래그먼트-->
    <string name="scheduleExercise">운동 스케줄링 하러가기</string>
    <string name="afterSubscribeService">"구독 후 이용 가능한 서비스 입니다."</string>

    <!--운동 선택 프래그먼트-->
    <string name="touchAndExerciseStart">터치 후 바로 운동 시작</string>
    <string name="exerciseCount">%1$d / %2$d</string>
    <string name="edit">편집</string>
    <string name="sets">세트</string>

    <!-- 동작인식 프래그먼트 -->
    <string name="cannotDetectPose">동작을 감지할 수 없습니다</string>
    <string name="endExercise">운동이 끝났습니다</string>

    <!--운동 편집 프래그먼트-->
    <string name="myExerciseList">내 운동 리스트</string>
    <string name="squat">스쿼트</string>
    <string name="pushUp">푸시업</string>
    <string name="lunge">런지</string>
    <string name="legRaises">레그레이즈</string>
    <string name="startExercise">운동 시작하기</string>
    <string name="basicSquat">기본 스쿼트</string>
    <string name="wideSquat">와이드 스쿼트</string>
    <string name="basicPushUp">기본 푸시업</string>
    <string name="basicLunge">기본 런지</string>
    <string name="leftLunge">왼쪽 런지</string>
    <string name="rightLunge">오른쪽 런지</string>
    <string name="basicLegRaises">기본 레그레이즈</string>
    <string name="leftLegRaises">왼쪽 레그레이즈</string>
    <string name="rightLegRaises">오른쪽 레그레이즈</string>
    <string name="maximumEditExercise">최대 20개 이상의 운동까지 추가 가능합니다.</string>
    <string name="changeMyExerciseList">내 운동 리스트가 변경 되었습니다.</string>
    <string name="networkConnectionIsUnstable">"네트워크 연결이 원할하지 않습니다.</string>
    <string name="canISubscribe">구독 후 이용 가능한 운동입니다. \n구독 하시겠습니까?</string>
    <string name="minimumEditExercise">최소 3개 이상의 운동이 있어야 합니다.</string>

    <!--유저 프래그먼트-->
    <string name="loginType">로그인 방식</string>
    <string name="subscribtion">플러스 구독</string>
    <string name="profileEdit">프로필 수정</string>
    <string name="logout">로그아웃</string>
    <string name="passwordChange">비밀번호 변경</string>
    <string name="withdrawal">회원탈퇴</string>
    <string name="progress">진행</string>
    <string name="subscriptionDialogButtonOk">구독 하러가기</string>
    <string name="subscriptionDialogContent">구독 기간이 만료 되었습니다.\n다양한 운동을 계속해서 이용하시려면\n구독하러 가기를 눌러주세요.</string>
    <string name="dueDateText">만료 일자 </string>
    <string name="setting">설정</string>
    <string name="successWithdrawal">회원탈퇴가 정상적으로 처리 되었습니다.</string>

    <!-- 유저 정보 편집 프래그먼트 -->
    <string name="successEditProfile">프로필 수정이 완료 되었습니다.</string>
    <string name="cannotUseNickname">사용할 수 없는 닉네임 입니다.</string>

    <!--커스텀 다이얼로그-->
    <string name="guide">안내</string>
    <string name="logoutDialogContent">로그아웃 하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="progressDialogContent">회원님의 구독기간이 만료되지 않았습니다.\n회원탈퇴 절차를 진행하시겠습니까?</string>
    <string name="withdrawalDialogContent">회원 탈퇴 진행 시 다음의 데이터는 삭제 처리되며 복구하실 수 없습니다.\n\n- 내 정보\n- 운동 기록\n- 구독 결제 내역\n\n회원 탈퇴를 진행 하시겠습니까?</string>
    <string name="confirm">확인</string>
    <string name="profileEditDialogContent">프로필 수정을 완료 하시겠습니까?</string>


    <!--비밀번호 재설정 프래그먼트-->
    <string name="passwordReset">비밀번호 재설정</string>
    <string name="inCorrectUserEmail">유효하지 않은 이메일 입니다.</string>
    <string name="correctUserEmail">회원정보와 일치하는 이메일 입니다.</string>
    <string name="myEmailInput">가입한 이메일을 입력해 주세요.</string>
    <string name="passwordResetComplete">성공적으로 비밀번호를 변경하였습니다.</string>
    <string name="changeUserInfoReLoginPlease">회원정보가 변경되었습니다. 다시 로그인 해 주세요.</string>
    <string name="canUseEmail">사용가능한 이메일 입니다.</string>
    <string name="alreadyExistEmail">이미 존재하는 이메일 입니다.</string>
    <string name="codeTransmission">인증코드를 전송 했습니다.</string>
    <string name="failCodeTransmission">전송에 실패했습니다.</string>
    <string name="cannotUseSamePassword">기존 비밀번호와 동일한 비밀번호는 사용하실 수 없습니다.</string>

    <!--다이어리 프래그먼트-->
    <string name="wave">~</string>
    <string name="selectDate">날짜 선택</string>
    <string name="graph">운동 그래프</string>
    <string name="MyChallengeProgress">내 챌린지 진행도</string>
    <string name="challenge">챌린지 : </string>
    <string name="exerciseRecordEmpty">운동 기록이 존재하지 않습니다.</string>
    <string name="nonChallenge">참여 중인 챌린지가 없습니다.</string>

    <!-- 결제 프래그먼트 -->
    <string name="subscribeAndAllExerciseEnjoy">구독하고 \n다양한 운동 즐기기</string>
    <string name="oneDay">1일</string>
    <string name="month">30일</string>
    <string name="year">1년</string>
    <string name="daySubscribeCost">200</string>
    <string name="monthSubscribeCost">6,000</string>
    <string name="discountMonthSubscribeCost">4,200</string>
    <string name="yearSubscribeCost">73,000</string>
    <string name="discountYearSubscribeCost">36,500</string>
    <string name="won">원</string>
    <string name="pleaseScheduling">여러가지 운동 컨텐츠로\n자유로운 스케쥴링을 해보세요</string>
    <string name="subscribeOneDay">하루 구독하기</string>
    <string name="subscribeMonth">한달 구독하기</string>
    <string name="subscribeYear">일년 구독하기</string>
    <string name="successPay">결제가 완료되었습니다.</string>
    <string name="failPay">결제에 실패하였습니다.</string>
    <string name="oneDaySubscribeItem">하루 구독권</string>
    <string name="monthSubscribeItem">30일 구독권</string>
    <string name="yearSubscribeItem">일년 구독권</string>
    <string name="tryAgainInstallKakaoTalk">카카오톡 설치 후 다시 시도해 주세요.</string>


    <!-- 인터넷 연결 불안정 할 때 다이얼로그-->
    <string name="internetDisconnect">인터넷 연결이 원활하지 않습니다\n인터넷 연결 확인 후 다시 시도해 주세요.</string>

    <!-- private Info -->
    <string name="baseUrl">http://15.164.49.94/</string>
    <string name="naverClientId">7M1HmHGA6kKvKrXgOScl</string>
    <string name="naverClientSecret">3so4YyCSuU</string>
    <string name="naverClientName">네이버아이디 로그인</string>
    <string name="kakaoAppKey">d997bc71e6bb7cad42042752aa3d4f9f</string>
    <string name="sender">fitfit240522@gmail.com</string>

</resources>