<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="findPasswordViewModel"
            type="com.example.fitfit.viewModel.FindPasswordViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.FindPasswordFragment">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBack"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@+id/imageViewBack"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewBack">

            <TextView
                android:id="@+id/textView3"
                style="@style/SignUpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordReset" />

            <TextView
                android:id="@+id/textViewPageCount"
                style="@style/SignUpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="20sp" />

        </LinearLayout>


        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="15dp"
            android:onClick="@{()->findPasswordViewModel.setOnBackButtonClick()}"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            app:layout_constraintStart_toStartOf="@+id/imageViewBack"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBack">


            <!--비밀번호 재설정 첫번째 과정-->
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    style="@style/SignUpTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/emailAuthentication" />

                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/grey"
                    android:hint="@string/myEmailInput"
                    android:inputType="text"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/textViewEmailCorrect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="3dp"
                    android:text=""
                    android:textStyle="bold"
                    android:visibility="gone" />


                <LinearLayout
                    android:id="@+id/linearLayoutCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3">

                        <EditText
                            android:id="@+id/editTextCode"
                            style="@style/editTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/grey"
                            android:hint="@string/authenticationCode"
                            android:inputType="text"
                            android:maxLength="6"
                            app:layout_constraintStart_toStartOf="@+id/textView4"
                            app:layout_constraintTop_toBottomOf="@+id/textView4" />

                        <TextView
                            android:id="@+id/textViewTimer"
                            style="@style/SignUpTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center"
                            android:layout_marginEnd="10dp"
                            android:text="@{findPasswordViewModel.setTimerFormat(findPasswordViewModel.timerCount)}"
                            android:textColor="@color/black" />

                    </FrameLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/buttonResend"
                        style="@style/buttonTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/login_button"
                        android:onClick="@{()->findPasswordViewModel.setOnButtonSendClick(editTextEmail.getText().toString())}"
                        android:text="@string/resend" />


                </LinearLayout>


            </LinearLayout>


            <!--비밀번호 재설정 두번째 과정-->
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/SignUpTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/enterPassword" />

                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/grey"
                    android:hint="@string/passwordHint"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:textSize="16sp"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/textViewPasswordValid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/validPasswordFormat"
                    android:textColor="@color/red"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editTextReconfirmPassword"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/grey"
                    android:hint="@string/reconfirmPassword"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:textSize="16sp"
                    android:visibility="gone"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/textViewPasswordCorrect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/inCorrectPasswordFormat"
                    android:textColor="@color/red"
                    android:visibility="gone" />

            </LinearLayout>
            <!--비밀번호 재설정 두번째 과정 끝-->


            <!--비밀번호 재설정 세번째 과정-->
            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="50dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/SignUpTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="50dp"
                    android:text="@string/passwordResetComplete" />

            </LinearLayout>
            <!--비밀번호 재설정 세번째 과정 끝-->


        </FrameLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNext"
            style="@style/buttonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="63dp"
            android:background="@drawable/login_button"
            android:backgroundTint="@color/grey"
            android:enabled="false"
            android:onClick="@{()->findPasswordViewModel.setOnNextButtonClick(editTextEmail.getText().toString(),editTextCode.getText().toString(),editTextPassword.getText().toString())}"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="@+id/frameLayout"
            app:layout_constraintStart_toStartOf="@+id/frameLayout"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonComplete"
            style="@style/buttonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/personal"
            android:text="@string/complete"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>