<?xml version="1.0" encoding="utf-8"?>

<layout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_dialog_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/dialogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/guide" />

        <View
            android:id="@+id/divider1"
            android:layout_width="360dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:background="?android:attr/listDivider" />

        <ImageView
            android:src="@drawable/internet_disconnect"
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <TextView
            android:id="@+id/textViewContent"
            style="@style/dialogText"
            android:gravity="center"
            android:text="@string/internetDisconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp" />

            <TextView
                android:id="@+id/textViewButtonOk"
                style="@style/defaultPersonalTextStyle"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


    </LinearLayout>


</layout>